[project]
name = "audiofetch"
version = "0.1.0"
description = "Download audio files from websites"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "posthog>=3.0.0",
]
